crafting working re-coded space as slot.x and .y is now local